2007-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c, fileio/system.h: Increase stack requested for shell
	task. Turn on stack checking so the report is interesting.

2007-12-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* fileio/init.c: Add RTEMS Shell configuration and static configuration
	of user commands.

2007-11-29	Chris Johns <chrisj@rtems.org>

	* iostream/Makefile.am: Change the executable name so it does not
	create a file which is the same name as the standard header file.
	* iostream/system.h: Need to increase the number of semaphores for
	the libstdc++ runtime.

2007-09-10	Joel Sherrill <joel.sherrill@OARcorp.com>

	* capture/Makefile.am: Use all managers.

2007-08-31	Joel Sherrill <joel.sherrill@OARcorp.com>

	* capture/Makefile.am: Fix typo -- not unlimited.

2007-08-21	Chris Johns <chrisj@rtems.org>

	* capture/init.c, capture/system.h, capture/test1.c: Removed CRs
	from files. Committed incorrectly.
	 
2007-08-17	Chris Johns <chrisj@rtems.org>

	* Makefile.am, README, configure.ac, capture/.cvsignore,
	capture/Makefile.am, capture/capture.doc, capture/capture.scn,
	capture/init.c, capture/system.h, capture/test1.c: Add a sample
	test for the capture engine.

2007-07-24	Joel Sherrill <joel.sherrill@OARcorp.com>

	* nsecs/init.c: Add include of unistd.h for sleep() prototype.

2007-07-17	Joel Sherrill <joel.sherrill@oarcorp.com>

	* nsecs/Makefile.am, nsecs/init.c: Move empty body to another file. The
	loop was being optimized out on the PowerPC.
	* nsecs/empty.c: New file.

2007-07-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* nsecs/init.c: Change name to avoid any hint of the timer driver.

2007-06-22	Joel Sherrill <joel.sherrill@OARcorp.com>

	* nsecs/init.c: Do not make this test depend on the benchmark timer
	driver.

2007-06-21	Joel Sherrill <joel.sherrill@oarcorp.com>

	* nsecs/init.c, nsecs/nsecs.scn: Add set of loops so you can see the
	time varaying in proportion to the length of the loop measured.
