@@ -1,3 +1,8 @@
+2007-12-17	Chris Johns <chrisj@rtems.org>
+
+	* testsuites/samples/fileio/init.c: Change shell_* to
+	rtems_shell_*. Add the mount file-system type of msdos.
+
 2007-12-14	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* fileio/init.c, fileio/system.h: Increase stack requested for shell
